<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="title"
            type="String" />
        <variable
            name="lang"
            type="String" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/circle_primary"
                android:src="@drawable/ic_left_arrow"
                android:padding="8dp"
                app:tint="@color/white"
                android:rotation='@{lang.equals("ar")?180:0}'
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@{title}"
                />
        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/Pay_the_bill"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray1"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:background="@drawable/rounded_top"
                        android:weightSum="5"
                        android:gravity="center_vertical"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:lines="2"
                            android:ellipsize="end"
                            android:text="@string/dept"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:lines="2"
                            android:ellipsize="end"
                            android:text="@string/inv"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:lines="2"
                            android:ellipsize="end"
                            android:text="@string/date"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:lines="2"
                            android:ellipsize="end"
                            android:text="@string/remain"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:lines="2"
                            android:ellipsize="end"
                            android:text="@string/amount"
                            />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"

                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:text="@string/total_amount"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/rounded_color3"
                            android:layout_marginTop="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:singleLine="true"
                            android:gravity="center"
                            />
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="0dp"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:text="@string/discount"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/rounded_color3"
                            android:layout_marginTop="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:singleLine="true"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/amount2"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/rounded_color3"
                        android:layout_marginTop="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:singleLine="true"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/notes"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/rounded_color3"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    >
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_green"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/show"

                        />
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="0dp"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_red"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/back"

                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
